<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/EventEdit"
    android:orientation="vertical"
    tools:context=".EventEdit">

    <TextView
        android:id="@+id/addevent"
        android:layout_width="match_parent"
...
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="4">

                <EditText
                    android:id="@+id/Event"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
...
                    android:hint="Event Name"
                    android:padding="20dp"
                    android:textColor="@color/black" />

                <!--
                <EditText
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Event"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
...
                    android:layout_weight="1"
                    android:layout_width="380dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/DateLayOut"
                    android:background="#30D9DDDC">
                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/Date"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
...
                        style="?android:spinnerStyle"
                        android:drawableLeft="@drawable/baseline_calendar_month_24" />
                </LinearLayout>

                <!--
                <EditText
                    android:id="@+id/StartTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_below="@+id/DateLayOut"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
...
                    android:layout_weight="1"
                    android:layout_width="380dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/StartTimeLayOut"
                    android:background="#30D9DDDC">
                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/StartTime"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
...
                        android:textColor="@color/black"
                        style="?android:spinnerStyle"
                        android:drawableLeft="@drawable/baseline_access_time_24" />
                </LinearLayout>

                <EditText
                    android:id="@+id/HowLong"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_below="@+id/StartTime"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
...

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Bar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/DONE"/>

    <Button
        android:id="@+id/CancelAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Done"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="CANCEL"/>

</RelativeLayout>
