...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ScheduleWeekly"
    tools:context=".ScheduleMonthly">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/Weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monthly"
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/Daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily "
            android:textStyle="bold"
            android:textSize="17dp"
            android:backgroundTint="@color/black"
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/AddEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/ClearEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Last Event"
            android:textStyle="bold"
            android:textSize="20dp"
            android:backgroundTint="@color/black"
            android:layout_weight="1"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
...
