...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gym_buddy_match_black_sixteen"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
...
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_home"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/friends" />

        <Button
            android:id="@+id/navigation_schedule"
            android:contentDescription="Schedule"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_friends"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/baseline_calendar_month_24" />

...
